Integrate the .pug files

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,6 +1,7 @@
-html 
-    head    
-        title Title here...
-    body
-       h1 Heading here...
-       p first paragraph xxx
+extends layout
+block content
+    h1 #{heading}
+    p first paragraph xxx
+    p now lets loop 
+    each item in data  
+        p #{item}
